force-app/main/default/objects/Offer__c/fields/Addres__c.field-meta.xml
<CustomField>
    <fullName>Addres__c</fullName>
    <formula>if(LEN(Customer_Contact__r.MailingStreet)&gt;0, Customer_Contact__r.MailingStreet&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp;
if(LEN(Customer_Contact__r.MailingCity)&gt;0, Customer_Contact__r.MailingCity&amp; &quot;, &quot; , &quot;&quot; )&amp;
if(LEN(Customer_Contact__r.MailingState)&gt;0, Customer_Contact__r.MailingState&amp; &quot; &quot; , &quot;&quot; )&amp;
if(LEN(Customer_Contact__r.MailingPostalCode)&gt;0, Customer_Contact__r.MailingPostalCode,&quot;&quot;) &amp; BR() &amp;
If(LEN( Customer_Contact__r.MailingCountry) &gt;0, Customer_Contact__r.MailingCountry,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Addres</label>
    <type>Text</type>
</CustomField>