force-app/main/default/objects/Offer__c/fields/Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Amount Collected</label>
    <type>Checkbox</type>
</CustomField>