force-app/main/default/objects/Offer__c/fields/Amount_Collected_Date__c.field-meta.xml
<CustomField>
    <fullName>Amount_Collected_Date__c</fullName>
    <label>Amount Collected Date</label>
    <type>Date</type>
</CustomField>