force-app/main/default/objects/Offer__c/fields/MRP_inclusive_of_all_taxes__c.field-meta.xml
<CustomField>
    <fullName>MRP_inclusive_of_all_taxes__c</fullName>
    <label>MRP (inclusive of all taxes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>