force-app/main/default/objects/Offer__c/fields/Net_Payable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Payable_Amount__c</fullName>
    <label>Net Payable Amount (inclusive of taxes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>