force-app/main/default/objects/Offer__c/fields/Offer_Product__c.field-meta.xml
<CustomField>
    <fullName>Offer_Product__c</fullName>
    <label>Offer Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LOCTITE Threadlocker 243</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>