force-app/main/default/objects/Offer__c/fields/Order_Deliver_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Deliver_Date__c</fullName>
    <label>Order Delivery Date</label>
    <type>Date</type>
</CustomField>