force-app/main/default/objects/Offer__c/fields/Order_Delivered__c.field-meta.xml
<CustomField>
    <fullName>Order_Delivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Delivered</label>
    <type>Checkbox</type>
</CustomField>