force-app/main/default/objects/Offer__c/fields/Order_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Requested_Date__c</fullName>
    <label>Order Requested Date</label>
    <type>Date</type>
</CustomField>