force-app/main/default/objects/Offer__c/fields/Pincode_Status__c.field-meta.xml
<CustomField>
    <fullName>Pincode_Status__c</fullName>
    <label>Pincode Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>