force-app/main/default/objects/Offer__c/fields/Role_In_Organisation__c.field-meta.xml
<CustomField>
    <fullName>Role_In_Organisation__c</fullName>
    <label>Role In Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>