force-app/main/default/objects/Offer__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Original Price(inclusive of taxes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>