force-app/main/default/objects/Offer__c/fields/Total_price_after_50_discount__c.field-meta.xml
<CustomField>
    <fullName>Total_price_after_50_discount__c</fullName>
    <label>Total price(after 50% discount)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>