force-app/main/default/objects/Offer__c/validationRules/Validation_for_Amount_Collected_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Amount_Collected_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Amount_Collected__c = TRUE,  ISBLANK(Amount_Collected_Date__c ) )</errorConditionFormula>
    <errorMessage>Please fill the amount collected date.</errorMessage>
</ValidationRule>