force-app/main/default/objects/Offer__c/validationRules/Validation_for_Order_Delivered.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_Order_Delivered</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  Order_Delivered__c = TRUE,  ISBLANK( Order_Deliver_Date__c ) )</errorConditionFormula>
    <errorMessage>Please fill the Order Delivery Date.</errorMessage>
</ValidationRule>