force-app/main/default/objects/Offer__c/validationRules/validation_if_status_is_complete.validationRule-meta.xml
<ValidationRule>
    <fullName>validation_if_status_is_complete</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Stauts__c ,&apos;Completed&apos;) ,
(ISBLANK( Amount_Collected_Date__c )  || 
ISBLANK( Order_Deliver_Date__c )))</errorConditionFormula>
    <errorMessage>Please fill Amount Collected Date and Order Delivery Date.</errorMessage>
</ValidationRule>