force-app/main/default/objects/Offer__c/validationRules/Validation_on_status_completed.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_on_status_completed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( PRIORVALUE( Stauts__c ) , &apos;Completed&apos;), ISCHANGED( Stauts__c ) )</errorConditionFormula>
    <errorMessage>You cannot change status once it is completed.</errorMessage>
</ValidationRule>