force-app/main/default/objects/Offer__c/validationRules/Validation_rule_for_status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_rule_for_status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR( ISPICKVAL( Stauts__c , &apos;On Hold&apos;) , ISPICKVAL( Stauts__c , &apos;Cancelled&apos;)), ISBLANK( Comment__c ) )</errorConditionFormula>
    <errorMessage>Please fill On Hold/Cancelled reason in Comment Box</errorMessage>
</ValidationRule>