force-app/main/default/objects/Offer__c/listViews/All_Offers.listView-meta.xml
<ListView>
    <fullName>All_Offers</fullName>
    <columns>NAME</columns>
    <columns>Company_Name__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>Offer_Product__c</columns>
    <columns>Quantity__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Stauts__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Distributor_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Offers</label>
</ListView>